--- a/Landing Page/style.css
+++ b/Landing Page/style.css
@@ -1,53 +1,50 @@
 @charset "UTF-8";
 
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sedan:ital@0;1&display=swap');
 
 :root{
-    --fonte-destaque: "Montserrat", sans-serif;
+    --fonte-destaque: "Montserrat", sans-serif;   
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.profile-pic {
+    margin-right: 20px; /* Espaçamento entre a foto e a bio */
+}
+
+.profile-pic img {
+    width: 200px; /* Largura da foto */
+    height: auto;
+    border-radius: 50%; /* Para uma foto redonda */
+}
+
+.bio {
+    max-width: 400px; /* Largura máxima da bio */
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #A6523F;
    
-}
-
-body{
-    background-color: #D5EAF2;
-}
-
-#principal{
-    margin: auto;    
-    width: 60%;
-    height: 250px;
-    margin-top: 20px;   
     
 }
 
-#principal{
-    position: fixed; /* ou absolute */
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
-    padding-right: 15px;
-    
-}
-
-div > h1{
-    font-size: 70px;
-    margin-bottom: 20px;
-    font-weight: 50px;
-    font-weight: lighter;
-    
-}
-
-div > p{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 20px;
-    font-weight: lighter;
-    text-indent: 20px;
-    
+p {
+    font-size: 16px;
+    line-height: 1.6;
 }
 
 #botao{
@@ -61,17 +58,3 @@ div > p{
     cursor: pointer; /* Cursor ao passar por cima */
     
 }
-
-.botao:hover {
-    background-color: #D5EAF2; /* Cor de fundo ao passar o mouse */
-}
-
-#foto{
-    padding: 20px;
-    margin:60px;
-    
-    
-}
-
-
-
