--- a/exercícios/ex.026/mq004/estilos/mediaquery.css
+++ b/exercícios/ex.026/mq004/estilos/mediaquery.css
@@ -1,2 +1,77 @@
 @charset "UTF-8";
 /*TODAS AS OUTRAS MIDIAS*/
+/*Typical Device Breakpoints
+pequenas telas: até 600px
+celular: 600px até 768 px
+tablet:768px até 992px
+desktop:992px até 1200px
+grandes telas:1200px ou mais*/
+
+@media print{
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body{
+        background-image: url(../imagens/back-print.jpg);/*Desnecessário*/
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+
+    main{
+        border: 2px solid black;
+    }
+
+
+
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+
+
+
+}
+
+
+@media screen and (min-width: 768px) and (max-width:992px){/*TABLET*/
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+
+}
+
+@media screen and (min-width: 992px) and (max-width:1200px){/*DESKTOP*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#tv{display: none;}
+
+}
+
+@media screen and (min-width: 1200px){ /*GRANDES TELAS*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
+
+  
+}
